--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask==3.1.1
 flask_cors==6.0.0
-Requests==2.32.3
+psycopg2==2.9.10
+python-dotenv==1.1.0
+redis==6.2.0
+Requests==2.32.4
+Unidecode==1.4.0
